Add UI and use it to play one round in the console

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Rock Paper Scissors!</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <div class="buttons-container">
+        <button data-selection="Rock">Rock</button>
+        <button data-selection="Paper">Paper</button>
+        <button data-selection="Scissors">Scissors</button>
+    </div>
 </body>
+<footer>
+    <script src="app.js"></script>
+</footer>
 </html>
