Refactor code to run on click button and end when a player reaches the 5-point score

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <button data-selection="Paper">Paper</button>
         <button data-selection="Scissors">Scissors</button>
     </div>
+    <div id="result-board"></div>
+    <div id="score-board"></div>
+    <div id="final-board"></div>
 </body>
 <footer>
     <script src="app.js"></script>
