--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors!</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="buttons-container">
-        <button data-selection="Rock">Rock</button>
-        <button data-selection="Paper">Paper</button>
-        <button data-selection="Scissors">Scissors</button>
+    <div class="content-container">
+        <div class="buttons-container">
+            <button data-selection="Rock">Rock</button>
+            <button data-selection="Paper">Paper</button>
+            <button data-selection="Scissors">Scissors</button>
+        </div>
+        <div class="results">
+            <div class="result-board"></div>
+            <div class="score-board"></div>
+            <div class="final-board"></div>
+        </div>
     </div>
-    <div id="result-board"></div>
-    <div id="score-board"></div>
-    <div id="final-board"></div>
 </body>
 <footer>
     <script src="app.js"></script>
